Done with landing, working on country page

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inconsolate';
-  src: url('./fonts/Inconsolata.otf') format('otf'),
+  src: url('./Inconsolata.otf') format('otf'),
   /* Add additional font formats if needed */
 }
 
