--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inconsolate';
+  font-family: 'Inconsolata';
   src: url('./Inconsolata.otf') format('otf'),
   /* Add additional font formats if needed */
 }
