--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -12,6 +12,10 @@ body {
     font-size: 1em;
 }
 
+.sidebar {
+    z-index: 999;
+}
+
 /* CSS Reset from https://www.joshwcomeau.com/css/custom-css-reset/ */
 
 /*
